# RAG_and_Agentic_AI_Implementation_Suite

./: .env_format  README.md  main.py  pyproject.toml  requirements.txt
AgenticRAG/: project.ipynb
Autonomous_RAG/: ChainofthoughtsRAG.ipynb  answersynthesis.ipynb  iterativeretrieval.ipynb  query_planning_and_decomposition.ipynb  selfreflection.ipynb
DataIngestionParsing/: Readme.md  databaseparsing.ipynb  datafromcsvandexcel.ipynb  dataingestion.ipynb  dataparsingdoc.ipynb  dataparsingpdf.ipynb  jsonparsing.ipynb
DataIngestionParsing/data/databases/: company.db
DataIngestionParsing/data/structuredfiles/: inventory.xlsx
Evaluation_of_chatbots_and_RAG/: chatbotevaluation.ipynb
HybridSearchStrategies/: Readme.md  mmr_relevant_and_diverse.ipynb  re_ranking.ipynb
LangGraph/: Agent_with_memory.ipynb  basic_example.ipynb  chatbot.ipynb  llm_with_multipletools.ipynb
LangGraph/Debugging/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
Multimodal-text-and-images/: multimodal.ipynb
Query_enhancement/: query_enhancement.ipynb
RAG_with_persistant_memory/: rag_with_persistant_memory_and_agent.ipynb
SemanticChunking/: understanding.ipynb
VectorStores/: RAG_DATASTAX.ipynb  chromadb.ipynb
VectorStores/chroma_db/: chroma.sqlite3
langchain_latest_updates/: agent_basic.ipynb  middleware.ipynb
